<resources>
    <string name="app_name">Google Apis Portfolio</string>

    <string name="facebook_app_id">2191646507738891</string>
    <string name="fb_login_protocol_scheme">fb2191646507738891</string>

    <string name="google_drive">Google Drive</string>
    <string name="google_maps">Google Maps</string>
    <string name="firebase_auth">Firebase Auth</string>
    <string name="google_vision">Google Vision</string>
    <string name="atomico_labs">Atomico Labs</string>
    <string name="welcome">Welcome!</string>
    <string name="push_message">Push Message</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_out">Sign Out</string>
    <string name="connected_with">Connected with</string>
    <string name="verify_code">Verify Code</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="create_account">Create Account</string>

    <string name="error_invalid_verification_code">Invalid verification code</string>
    <string name="error_invalid_phone_number">Invalid phone number</string>
    <string name="input_email_error">Enter a valid email address</string>
    <string name="input_password_error">Minimum 6 characters are required</string>
    <string name="input_confirm_password_error">Confirm password is required</string>
    <string name="input_password_dont_match_error">Passwords entered do not match</string>
    <string name="repeat_password">Repeat password</string>
    <string name="could_not_create_account">Could not create your account: </string>
    <string name="authentication_failed">Email/Password Authentication Failed: </string>
    <string name="facebook_authentication_failed">Facebook Authentication Failed: </string>
    <string name="google_authentication_failed">Google Authentication Failed: </string>
    <string name="allow">Allow</string>
    <string name="allow_your_location">Allow your location</string>
    <string name="allow_your_location_msg">Please give access to your location to use this functionality.</string>

</resources>
